minor spacing fix

--- a/_sass/_review.scss
+++ b/_sass/_review.scss
@@ -364,6 +364,7 @@
     }
     .tooltip-element {
       margin-bottom: auto;
+      margin-top: 10px;
       .info-circle {
         .i-info-circle-green {
           font-size: 16px;
